<resources>
    <string name="app_name">SkinSafe</string>
    <string name="app_vers">0.02</string>
    <string name="action_settings">Settings</string>

    <!-- Settings Menue -->
    <string name="settings">Settings</string>
    <string name="take_photo">Image from Camera</string>
    <string name="select_photo_from_gallery">Image from Gallery</string>
    <string name="delete_photo">Delete Image</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="about_skinsafe">About SkinSafe</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hyperlinkSkinSafeSourceCode"><a href="https://github.com/slinGitHub/SkinSafe">SkinSafe Github Repo Source Code</a></string>
    <string name="hyperlinkSkinSafeWeb"><a href="https://slingithub.github.io/SkinSafeWeb/">SkinSafe Github Landing Page</a></string>
    <string name="hyperlinkPrivacyPolicy"><a href="https://slingithub.github.io/SkinSafeWeb/privacyPolicy.html">SkinSafe Privacy Policy</a></string>
    <string name="paypal_url">https://www.paypal.com/ncp/payment/WY7DJ55SGCU6E</string>
    <string name="hyperlinkPaypalDonate"><a href="@string/paypal_url">Donate with Paypal</a></string>


    <!-- UpdateChecker -->
    <string name="update_available_title">Update available</string>
    <string name="update_available_message">A new version (%1$s) of the app is available.</string>
    <string name="update_button_download">Download</string>
    <string name="update_button_later">Later</string>
    <string name="toast_up_to_date">App is up to date</string>
    <string name="toast_update_failed">Update check failed</string>

    <!-- Bottom sheet-->
    <string name="created_on">Created on</string>
    <string name="notes">Notes</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="imageTitle">Enter image title</string>
    <string name="set_points">Set points</string>
    <string name="skinsafe_logo">SkinSafe Logo</string>
    <string name="days_old">Days old</string>
    <string name="description_move_point">Move Point</string>
    <string name="description_delete">Delete</string>
    <string name="no_date_found">No Date found..</string>
    <string name="place_holder_rate_your_exp">" "</string>
    <string name="add_your_notes_here">Add your notes here..</string>

    <!-- About SkinSafe sheet-->
    <string name="button_check_for_updates">Check for Updates</string>
    <string name="about_page_visit_the_skinsafe_project_page">Visit the SkinSafe project page</string>
    <string name="about_page_skinsafe">SKIN SAFE</string>
    <string name="about_page_donate_via_paypal">Donate via Paypal ❤️</string>
    <string name="about_page">by N. B., 2026</string>
    <string name="top_app_bar_switch_history">Switch History</string>
    <string name="top_app_bar_toggle_protected_images">Toggle Protected Images</string>
    <string name="show_welcome_screen">Show welcome screen</string>

</resources>