<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_capture_image"
        android:title="@string/take_photo"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pick_image"
        android:title="@string/select_photo_from_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_image"
        android:title="@string/delete_photo"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_data"
        android:title="@string/export_data"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_data"
        android:title="@string/import_data"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:id="@+id/check_for_updates"-->
<!--        android:title="@string/check_for_updates"-->
<!--        android:icon="@android:drawable/ic_menu_delete"-->
<!--        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_aboutSkinSafe"
        android:title="@string/about_skinsafe"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

</menu>